# lbxd-stats

./: README.md  add_from_list.py  add_titles.py  fix_tmdb_errors.py  front.py  gen_catalog.py  gen_report.py  index.html  main.py  movie_info.py  pyproject.toml  report.html  requirements.txt  scraper.ipynb  scraper.py  update_sampler.py  update_scrap.ipynb  utils.py  watchlist.py
.github/workflows/: main.yml
experiments/: heuristic.ipynb
notebooks/: stability.py
res/: catalog.json  measures.jsonl  watchlist.json  watchlist.toml  watchlist_new.json
res/graph_data/: 10-cloverfield-lane.json  10-things-i-hate-about-you.json  12-angry-men.json  12-years-a-slave.json  13-going-on-30.json  1917.json  2001-a-space-odyssey.json  21-jump-street.json  27-dresses.json  28-days-later.json  500-days-of-summer.json  65.json  a-beautiful-mind.json  a-bugs-life.json  a-charlie-brown-christmas.json  a-charlie-brown-thanksgiving.json  a-christmas-story-1983.json  a-clockwork-orange.json  a-complete-unknown.json  a-different-man.json  a-dogs-will-2.json  a-ghost-story-2017.json  a-man-called-otto.json  a-minecraft-movie.json  a-nightmare-on-elm-street.json  a-nonsense-christmas-with-sabrina-carpenter.json  a-quiet-place-2018.json  a-quiet-place-day-one.json  a-quiet-place-part-ii.json  a-real-pain.json  a-silent-voice.json  a-star-is-born-2018.json  a-thousand-and-one.json  a-working-man.json  a.json  abigail-2024.json  about-time.json  ad-astra-2019.json  adam-sandler-love-you.json  adolescence-2025.json  (+1319 more)
res/movie_data/: 01.json  02.json  201.json  (+1668 more)
tests/: test_update_sampler.py
(+1 files in other folders)
