[project]
name = "lbxd-stats"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Julien uj Abadji", email = "sudo.screenlife@gmail.com" }]
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "toml>=0.10.2",
    "polars>=0.20.31",
    "plotly>=5.22.0",
    "pyarrow>=16.1.0",
    "statsmodels>=0.14.2",
    "tmdbv3api>=1.9.0",
    "setuptools>=70.1.0",
    "ydata-profiling>=4.16.1",
]
readme = "README.md"
requires-python = ">= 3.12"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.rye]
# managed = true
# dev-dependencies = [
#     "ipynb>=0.5.1",
#     "ipykernel>=6.29.4",
# ]

# [tool.hatch.metadata]
# allow-direct-references = true

# [tool.hatch.build.targets.wheel]
# packages = ["src/lbxd_stats"]
